@@ -6,6 +6,7 @@ Version 0.7.0~dev
 	* Add audio bitrate option to transcode action.
 	* Add gop_size option to MPEG2/XDCAMHD transcoding profiles.
 	* Add gop_size option to transcode action.
+	* Support more DNxHD transcoding profiles in ffmpeg worker.
 
 Version 0.6.0 Released on 2012/08/06
 
